test/fail/import/brace_at_end.lly
#[
SyntaxError: '}' outside of a block.
Where: File "brace_at_end.lly" at line 6
]#

}
